<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="@dimen/padding"
    tools:context=".trip.view.TripsListActivity">

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/rvMembers"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_above="@+id/rlBottom"
        android:layout_alignParentTop="true" />

    <TextView
        android:id="@+id/txtNoMembers"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:text="@string/no_members"
        android:visibility="gone" />

    <RelativeLayout
        android:id="@+id/rlBottom"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true">

        <TextView
            android:id="@+id/txtTotalContribution"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/contribution" />

        <TextView
            android:id="@+id/txtTotalExpanse"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:text="@string/expense" />

        <Button
            android:id="@+id/btnAddMember"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/txtTotalContribution"
            android:layout_marginTop="@dimen/padding"
            android:text="@string/add_member" />
    </RelativeLayout>

</RelativeLayout>